Fixed it to work on firefox

--- a/wolf-css/wolf-moose.css
+++ b/wolf-css/wolf-moose.css
@@ -207,18 +207,13 @@ Inner items for the background carousel
     -ms-transition: opacity 3s;
     -o-transition: opacity 3s;
     transition: opacity 3s;
-    /*    -webkit-filter: blur(5px);*/
-    /*
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
-    */
+
+    
     -webkit-filter: grayscale(0.4) opacity(0.6) blur(3px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+    -moz-filter: grayscale(0.4) opacity(0.6) blur(3px);
+    -o-filter: grayscale(0.4) opacity(0.6) blur(3px);
+    -ms-filter: grayscale(0.4) opacity(0.6) blur(3px);
+    filter: grayscale(0.4) opacity(0.6) blur(3px);
 
 }
 .carousel-bkg .one {
